# CMake-Cross-Compile-for-Linux-and-Windows

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_linux.sh  run_test.sh  run_win.sh
src/: demo.hpp  main  main.cpp
test/: example_test.cpp
win32_toolchain/: win32_toolchain.cmake
